--- a/app/templates/home/secrets.html
+++ b/app/templates/home/secrets.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base-fullscreen.html" %}
-{% block title %} Secrets {% endblock %} 
+{% block title %} Secrets {% endblock %}
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 <link type="text/css" href="/static/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -12,24 +12,19 @@
             {% include 'includes/sidebar.html' %}
             <div class="main-body">
                 <div class="main-body-header">
-                    <a></a>
+                    <h4 class="mb-0">Secrets
+                        <div class="tooltip-container">
+                            <a href="https://perforge.app/docs/configuration/secrets" target="_blank">
+                                <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                            </a>
+                            <div class="tooltip-content" style="font-size: 16px;">
+                                Click to learn more
+                            </div>
+                        </div>
+                    </h4>
                 </div>
                 <div class="d-flex" style="flex-wrap: wrap;">
                     <div class="card mb-3 margin-all-10" data-component-card="data-component-card" style="width: 100%;">
-                        <div class="card-header">
-                            <div class="justify-content-between align-items-center">
-                                <h4 class="mb-0">Secrets
-                                    <div class="tooltip-container">
-                                        <a href="https://perforge.app/docs/configuration/secrets" target="_blank">
-                                            <span class="fa-regular fa-circle-question me-2 mt-2"></span>
-                                        </a>
-                                        <div class="tooltip-content" style="font-size: 16px;">
-                                            Click to learn more
-                                        </div>
-                                    </div>
-                                </h4>
-                            </div>
-                        </div>
                         <div class="card-body">
                             <div id="secrets">
                                 <div class="d-flex align-items-center justify-content-end mb-3">
@@ -43,6 +38,7 @@
                                             <tr>
                                                 <th class="sort" data-sort="key">Key</th>
                                                 <th class="sort" data-sort="type">Type</th>
+                                                <th class="sort" data-sort="project_id">Scope</th>
                                                 <th class="sort" data-sort="actions">Actions</th>
                                             </tr>
                                         </thead>
@@ -51,6 +47,15 @@
                                             <tr>
                                                 <td class="key">{{ secret.key }}</td>
                                                 <td class="type">{{ secret.type }}</td>
+                                                <td class="project_id">
+                                                    <div class="badge badge-primary">
+                                                        {% if secret.project_id %}
+                                                            PROJECT
+                                                        {% else %}
+                                                            ALL
+                                                        {% endif %}
+                                                    </div>
+                                                </td>
                                                 <td class="actions" style="width: 20%;">
                                                     <a class="btn btn-secondary" href="/edit_secret?secret_id={{ secret.id }}&secret_type={{ secret.type }}">Edit</a>
                                                     <a class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal{{ secret.id }}">Delete</a>
