--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -13,7 +13,7 @@
                <div class="main-body-header">
                </div>
                <div class="start-section ms-4 mt-3">
-                  <h2 class="mb-2 lh-sm">Getting started</h2>
+                  <h2 class="lh-sm">Project stats</h2>
                </div>
                <div class="start-section ms-4 mt-3">
                   <div class="pr-10 col-xxl-2-5 col-lg-2-5">
