--- a/app/templates/home/secret.html
+++ b/app/templates/home/secret.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base-fullscreen.html" %}
-{% block title %} Secret {% endblock %} 
+{% block title %} Secret {% endblock %}
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 <link type="text/css" href="/static/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -45,6 +45,8 @@
                                     {% endif %}
                                     <label for="key">Key:</label>
                                     {{ form.key(class="form-control") }}
+                                    <label for="project_id">Scope:</label>
+                                    {{ form.project_id(class="form-control") }}
                                     <label for="value" class="mt-2">Value:</label>
                                     <div class="input-group">
                                         {{ form.value(class="form-control", type="password") }}
