--- a/app/templates/integrations/azure.html
+++ b/app/templates/integrations/azure.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base-fullscreen.html" %}
-{% block title %} Azure {% endblock %} 
+{% block title %} Azure {% endblock %}
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 <link type="text/css" href="/static/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -46,7 +46,12 @@
                                   </div>
                                 </div>
                                 <label for="token" class="input-label mt-2">Token:</label>
-                                {{ form.token(class="form-control") }}
+                                    <select class="form-control" name="token" id="token">
+                                        <option value="" {% if form.token.data is none or form.token.data == '' %} selected {% endif %}>Select the secret</option>
+                                        {% for secret in secret_configs %}
+                                            <option value="{{ secret.id }}" {% if form.token.data == secret.id %} selected {% endif %}>{{ secret.key }}</option>
+                                        {% endfor %}
+                                    </select>
                                 <label for="org_url" class="mt-2">Wiki Organization Url:</label>
                                 {{ form.org_url(class="form-control") }}
                                 <label for="project_id" class="mt-2">Wiki Project:</label>
